Add example for websocket listening for collections

--- a/courses/firebase-in-depth/courses-app/src/app/features/settings/settings.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/features/settings/settings.component.html
@@ -21,3 +21,7 @@
 <button type="button" (click)="onSearchNestedCollection()">
   Search lessons for first course (check console)
 </button>
+
+<button type="button" (click)="onListenToDataChange()">
+  Listen to data change (check console)
+</button>
