--- a/courses/firebase-in-depth/courses-app/src/app/core/navbar/navbar.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/core/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   </ul>
   <ul>
     <li><a routerLink="/courses" routerLinkActive="active">Courses</a></li>
-    <li><a routerLink="/settings" routerLinkActive="active">Settings</a></li>
+    <li><a routerLink="/playground" routerLinkActive="active">Playground</a></li>
     <li><a routerLink="/users/invite" routerLinkActive="active">Invite</a></li>
     <ng-container *ngTemplateOutlet="isSignedIn() ? signedInRef : signedOutRef" />
   </ul>
