--- a/workshops/sports-watcher-fe/src/app/features/user/pages/sign-in/sign-in.component.html
+++ b/workshops/sports-watcher-fe/src/app/features/user/pages/sign-in/sign-in.component.html
@@ -34,6 +34,13 @@
       Sign in
     </button>
 
+    <button type="button" class="btn btn-link" (click)="onSignInAsBasic()">
+      Psst! Sign in as Basic
+    </button>
+    <button type="button" class="btn btn-link" (click)="onSignInAsAdmin()">
+      Psst! Sign in as Admin
+    </button>
+
   </form>
 
 </main>
