--- a/workshops/sports-watcher-fe/src/app/features/teams/pages/team/team.component.html
+++ b/workshops/sports-watcher-fe/src/app/features/teams/pages/team/team.component.html
@@ -2,7 +2,7 @@
 
 <nav aria-label="breadcrumb" class="mb-4">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a routerLink="/teams">Teams</a></li>
+    <li class="breadcrumb-item"><a routerLink="/teams">&larr; Teams</a></li>
     <li class="breadcrumb-item active" aria-current="page">{{ team().name }}</li>
   </ol>
 </nav>
