--- a/workshops/sports-watcher-fe/src/app/features/teams/pages/teams/teams.component.html
+++ b/workshops/sports-watcher-fe/src/app/features/teams/pages/teams/teams.component.html
@@ -3,47 +3,49 @@
 <div *ngIf="isAdmin()" class="card mb-4 bg-light">
   <div class="card-body">
   <h2>Create a new team</h2>
-    <form
-      class="row row-cols-lg-auto g-3 align-items-center"
-      [formGroup]="teamForm"
-      (ngSubmit)="onCreateTeam()"
-    >
+    <div class="container-fluid gx-0">
+      <form
+        class="row g-3 align-items-end"
+        [formGroup]="teamForm"
+        (ngSubmit)="onCreateTeam()"
+      >
 
-      <!-- ID -->
-      <div class="col-12">
-        <label class="visually-hidden" for="teamid">ID</label>
-        <input
-          type="text"
-          class="form-control"
-          formControlName="id"
-          id="teamid"
-          placeholder="Team ID..."
-        >
-      </div>
+        <!-- ID -->
+        <div class="col-3">
+          <label for="teamid">ID</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="id"
+            id="teamid"
+            placeholder="Team ID..."
+          >
+        </div>
 
-      <!-- Name -->
-      <div class="col-12">
-        <label class="visually-hidden" for="teamname">Name</label>
-        <input
-          type="text"
-          class="form-control"
-          formControlName="name"
-          id="teamname"
-          placeholder="Team Name..."
-        >
-      </div>
+        <!-- Name -->
+        <div class="col-3">
+          <label for="teamname">Name</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="name"
+            id="teamname"
+            placeholder="Team Name..."
+          >
+        </div>
 
-      <!-- Submit -->
-      <div class="col-12">
-        <button
-          type="submit"
-          class="btn btn-primary"
-          [disabled]="teamForm.invalid"
-        >
-          Create team
-        </button>
-      </div>
-    </form>
+        <!-- Submit -->
+        <div class="col-3">
+          <button
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="teamForm.invalid"
+          >
+            Create team
+          </button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 
