--- a/workshops/sports-watcher-fe/src/app/app.component.html
+++ b/workshops/sports-watcher-fe/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <!-- Notification -->
 <div *ngIf="notification() as notif" class="alert-container">
-  <div class="alert alert-dismissible" [ngClass]="notificationCssClass()">
+  <div [ngClass]="['alert alert-dismissible', notificationCssClass()]">
     {{ notif.message }}
     <button type="button" class="btn-close" (click)="onDismissAlert()"></button>
   </div>
