--- a/workshops/sports-watcher-fe/src/app/app.component.scss
+++ b/workshops/sports-watcher-fe/src/app/app.component.scss
@@ -1,7 +1,8 @@
 .alert-container {
   position: fixed;
-  top: 1rem;
+  top: 5rem;
   right: 1rem;
+  z-index: 2;
   min-width: min(350px, 95vw);
   max-width: min(500px, 95vw);
 }
