Fix create match form validator

--- a/workshops/sports-watcher-fe/src/app/features/matches/pages/matches/matches.component.html
+++ b/workshops/sports-watcher-fe/src/app/features/matches/pages/matches/matches.component.html
@@ -61,14 +61,17 @@
           <button
             type="submit"
             class="btn btn-primary"
-            [disabled]="matchForm.invalid || (matchFormSameTeamError | async)"
+            [disabled]="matchForm.invalid"
           >
             Create match
           </button>
         </div>
+
       </form>
     </div>
-    <p *ngIf="matchFormSameTeamError | async">Cannot choose the same team!</p>
+    <p *ngIf="matchForm.hasError('sameTeam')">
+      {{ matchForm.errors!['sameTeam'] }}
+    </p>
   </div>
 </div>
 
