--- a/workshops/sports-watcher-fe/src/styles.scss
+++ b/workshops/sports-watcher-fe/src/styles.scss
@@ -3,3 +3,7 @@ html, body {
   min-height: 100vh;
   margin: 0;
 }
+
+:root {
+  --bs-font-sans-serif: 'Rubik', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
