Add create course page

--- a/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.html
@@ -1,5 +1,8 @@
 <h1>Courses</h1>
 
+<a routerLink="/courses/create">Create new course</a>
+<hr>
+
 <h2>Beginner</h2>
 <ng-container *ngIf="beginnerCourses$ | async as beginnerCourses">
   <ul *ngIf="beginnerCourses.length; else noBeginnerCoursesRef">
