Fix courses page styling

--- a/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.html
@@ -1,7 +1,7 @@
+<div class="page-header">
 <h1>Courses</h1>
-
 <a routerLink="/courses/create">Create new course</a>
-<hr>
+</div>
 
 <h2>Beginner</h2>
 <ng-container *ngIf="beginnerCourses$ | async as beginnerCourses">
