--- a/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/create-course/create-course.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/create-course/create-course.component.html
@@ -7,6 +7,7 @@
     <label for="course-title">Title</label>
     <input
       type="text"
+      id="course-title"
       formControlName="title"
       placeholder="Course title..."
     >
@@ -26,6 +27,7 @@
     <label for="course-title">Description</label>
     <input
       type="text"
+      id="course-title"
       formControlName="description"
       placeholder="Course description..."
     >
@@ -43,7 +45,7 @@
   <!-- Category -->
   <div class="form-control">
     <label for="course-title">Category</label>
-    <select formControlName="category">
+    <select id="course-title" formControlName="category">
       <option value="Beginner">Beginner</option>
       <option value="Intermediate">Intermediate</option>
       <option value="Advanced">Advanced</option>
