--- a/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.scss
+++ b/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.scss
@@ -7,3 +7,37 @@
   margin-bottom: 2rem;
   border-bottom: 2px solid #ccc;
 }
+
+.course-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  list-style-type: none !important;
+  margin: 0;
+  padding: 0;
+}
+
+.course-card {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 2px solid var(--primary);
+  background-color: var(--primary-focus);
+
+  &__header {
+    margin-bottom: 1rem;
+    color: var(--primary);
+
+    &__title {
+      margin: 0;
+    }
+
+    &__id {
+      font-family: monospace;
+      font-size: 0.8rem;
+    }
+  }
+
+  // &__body {
+
+  // }
+}
