--- a/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.scss
+++ b/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.scss
@@ -40,4 +40,16 @@
   // &__body {
 
   // }
+
+  &__footer {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 0.5rem;
+
+    button {
+      width: initial;
+    }
+  }
 }
