--- a/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/create-or-edit-course/create-or-edit-course.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/create-or-edit-course/create-or-edit-course.component.html
@@ -1,6 +1,6 @@
 <h1>Create course</h1>
 
-<form [formGroup]="theForm" (ngSubmit)="onSubmit()">
+<form *ngIf="theForm" [formGroup]="theForm" (ngSubmit)="onSubmit()">
 
   <!-- Title -->
   <div class="form-control">
@@ -24,10 +24,10 @@
 
   <!-- Description -->
   <div class="form-control">
-    <label for="course-title">Description</label>
+    <label for="course-description">Description</label>
     <input
       type="text"
-      id="course-title"
+      id="course-description"
       formControlName="description"
       placeholder="Course description..."
     >
@@ -44,11 +44,11 @@
 
   <!-- Category -->
   <div class="form-control">
-    <label for="course-title">Category</label>
-    <select id="course-title" formControlName="category">
-      <option value="Beginner">Beginner</option>
-      <option value="Intermediate">Intermediate</option>
-      <option value="Advanced">Advanced</option>
+    <label for="course-category">Category</label>
+    <select id="course-category" formControlName="category">
+      <option [value]="BEGINNER">{{ BEGINNER }}</option>
+      <option [value]="INTERMEDIATE">{{ INTERMEDIATE }}</option>
+      <option [value]="ADVANCED">{{ ADVANCED }}</option>
     </select>
     <p *ngIf="fCategory.hasError('required')" class="form-control-error">
       Required
@@ -57,7 +57,9 @@
 
   <!-- Submit -->
   <div class="form-control">
-    <button type="submit" [disabled]="theForm.invalid">Create</button>
+    <button type="submit" [disabled]="theForm.invalid">
+      {{ isEditing ? 'Edit' : 'Create' }}
+    </button>
   </div>
 
 </form>
