--- a/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/features/courses/pages/courses/courses.component.html
@@ -1,6 +1,6 @@
-<div class="page-header">
-<h1>Courses</h1>
-<a routerLink="/courses/create">Create new course</a>
+<div class="ui-page-header">
+  <h1 class="ui-page-header__title">Courses</h1>
+  <a routerLink="/courses/create">Create new course</a>
 </div>
 
 <section *ngFor="let category of categories">
@@ -40,8 +40,8 @@
     </div>
     <div class="course-card__footer">
       <button type="button" (click)="onRemove(course.id)">Remove</button>
-      <button type="button" (click)="onEdit(course.id)">Edit</button>
-      <button type="button" (click)="onView(course.id)">View</button>
+      <button type="button" (click)="onEdit(course.slug)">Edit</button>
+      <button type="button" (click)="onView(course.slug)">View</button>
     </div>
   </div>
 </ng-template>
