--- a/courses/firebase-in-depth/courses-app/src/app/core/navbar/navbar.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/core/navbar/navbar.component.html
@@ -2,21 +2,22 @@
   <ul>
     <li><strong>Firebase Courses</strong></li>
   </ul>
-  <ul>
-    <li><a routerLink="/courses" routerLinkActive="active">Courses</a></li>
-    <li><a routerLink="/playground" routerLinkActive="active">Playground</a></li>
-    <li><a routerLink="/users/invite" routerLinkActive="active">Invite</a></li>
-    <ng-container *ngTemplateOutlet="isSignedIn() ? signedInRef : signedOutRef" />
-  </ul>
+  <ng-container *ngTemplateOutlet="isSignedIn() ? signedInRef : signedOutRef" />
 </nav>
 
 <!-- Template: Signed in user -->
 <ng-template #signedInRef>
-  <li><button type="button" (click)="onSignOut()">Sign Out</button></li>
+  <ul>
+    <li><a routerLink="/courses" routerLinkActive="active">Courses</a></li>
+    <li><a routerLink="/playground" routerLinkActive="active">Playground</a></li>
+    <li><a routerLink="/users/invite" routerLinkActive="active">Invite</a></li>
+    <li><a role="button" href="#" (click)="onSignOut($event)">Sign Out</a></li>
+  </ul>
 </ng-template>
 
 <!-- Template: Signed out user -->
 <ng-template #signedOutRef>
-  <li><a routerLink="/users/sign-up" routerLinkActive="active">Sign Up</a></li>
-  <li><a routerLink="/users/sign-in" routerLinkActive="active">Sign In</a></li>
+  <ul>
+    <li><a routerLink="/users/sign-in" routerLinkActive="active">Sign In</a></li>
+  </ul>
 </ng-template>
