--- a/courses/firebase-in-depth/courses-app/src/app/core/navbar/navbar.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/core/navbar/navbar.component.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a routerLink="/courses" routerLinkActive="active">Courses</a></li>
     <li><a routerLink="/playground" routerLinkActive="active">Playground</a></li>
-    <li><a routerLink="/users/invite" routerLinkActive="active">Invite</a></li>
+    <!-- <li><a routerLink="/users/invite" routerLinkActive="active">Invite</a></li> -->
     <li><a role="button" href="#" (click)="onSignOut($event)">Sign Out</a></li>
   </ul>
 </ng-template>
@@ -18,6 +18,7 @@
 <!-- Template: Signed out user -->
 <ng-template #signedOutRef>
   <ul>
+    <li><a routerLink="/playground" routerLinkActive="active">Playground</a></li>
     <li><a routerLink="/users/sign-in" routerLinkActive="active">Sign In</a></li>
   </ul>
 </ng-template>
